# OpenCompGraph

./: .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  Cargo.toml  LICENSE  README.md  build_OpenCompGraph_linux.bash  build_OpenCompGraph_windows64.bat  build_linux.bash  build_windows64.bat  cbindgen.toml
cmake/modules/: OpenCompGraphUtils.cmake
config/: README.md  open_comp_graph.yaml
include/: CMakeLists.txt  opencompgraph.h
include/opencompgraph/: _cbindgen.h  _cpp.h  _cxxbridge.h  cache.h  cbindgen.h  colorlutimage.h  colorspace.h  config.h  cpp.h  debug.h  graph.h  imageio.h  ldpk_utils.h  node.h  oiio_utils.h  operation.h  stream.h  symbol_export.h
include/opencompgraph/internal/: colorspace.h  cpp.h  debug.h  imageio.h  imageresample.h  ldpk_utils.h  oiio_utils.h  pixelblock.h  systemmemory.h
scripts/: build_rust_linux.bash  build_rust_windows64.bat
src/: CMakeLists.txt  _cxxbridge.cpp  attrblock.rs  bbox.rs  cache.cpp  cache.rs  cbindgen.rs  colorlutimage.cpp  colorlutimage.rs  colorop.rs  coloroputils.rs  colorspace.cpp  colorspace.rs  colorutils.rs  colorxform.rs  config.cpp  config.rs  cpp.cpp  cxxbridge.rs  data.rs  deformer.rs  deformutils.rs  geom.rs  graph.cpp  graph.rs  graphiter.rs  hashutils.rs  imagebuffer.rs  imageio.cpp  imageio.rs  imagemerge.rs  imagemetadata.rs  imagespec.rs  ldpk_utils.cpp  lib.cpp  lib.rs  logger.rs  main.cc  math.rs  mathutils.rs  (+15 more)
src/bbox/: bbox2df.rs  bbox2di.rs
src/bbox/bbox2di/: row.rs  row_iter.rs  rows.rs  rows_iter.rs
src/colorop/: README.md  colorgrade.rs
src/data/: README.md  vector4f32.rs  vector4i32.rs
src/deformer/: README.md  brownian.rs  ldpk_utils.cpp  ldpk_utils.rs  tde4_classic.rs  transform.rs
src/geom/: README.md  plane.rs
src/math/: README.md  colorxform.rs  interp.rs  xform.rs
src/node/: crop_image.rs  grade.rs  lens_distort.rs  merge_image.rs  mod.rs  null.rs  read_image.rs  resample_image.rs  traits.rs  transform.rs  viewer.rs  write_image.rs
src/ops/: README.md  bake.rs  colorgrade.rs  imagecrop.rs  imagemerge.rs  imageresample.cpp  imageresample.rs  mod.rs  null.rs  pixelremap.rs  read_image.rs  traits.rs  write_image.rs  xformcolor.rs
src/pixelblock/: blocksize.rs  datablock.rs  dataslice.rs  datatype.rs  dynimage.rs  pixelblock.rs  utils.rs
src/pixelblock/pixelblock/: index.rs  row.rs
src/utils/: README.md
tests/: CMakeLists.txt  README.md  generate_frame_range.cpp  generate_frame_range.h  generate_mesh.cpp  generate_mesh.h  main.cc  main.cpp  run_tests.bat  test_a.cpp  test_a.h  test_b.cpp  test_b.h  test_c.cpp  test_c.h  test_d.cpp  test_d.h  test_e.cpp  test_e.h  test_f.cpp  test_f.h  test_g.cpp  test_g.h  test_h.cpp  test_h.h  test_i.cpp  test_i.h  test_j.cpp  test_j.h  test_k.cpp  test_k.h  test_l.cpp  test_l.h  test_m.cpp  test_m.h
tests/test_cache/: test_cache_init.cpp  test_cache_init.h  test_cache_read_image_seq.cpp  test_cache_read_image_seq.h
tests/test_graph/: test_graph_create_and_set_attrs.cpp  test_graph_create_and_set_attrs.h  test_graph_no_ops.cpp  test_graph_no_ops.h  test_graph_non_linear_graph.cpp  test_graph_non_linear_graph.h  test_graph_re_connect_graph.cpp  test_graph_re_connect_graph.h  test_graph_re_eval_modified_graph.cpp  test_graph_re_eval_modified_graph.h
tests/test_node_crop/: test_node_crop.cpp  test_node_crop.h
tests/test_node_grade/: test_node_grade.cpp  test_node_grade.h  test_node_grade_concat.cpp  test_node_grade_concat.h
tests/test_node_imageio/: test_node_imageio.cpp  test_node_imageio.h  test_node_imageio_j2k.cpp  test_node_imageio_j2k.h  test_node_imageio_jpeg.cpp  test_node_imageio_jpeg.h  test_node_imageio_png.cpp  test_node_imageio_png.h  test_node_imageio_tiff.cpp  test_node_imageio_tiff.h
tests/test_node_lens/: test_node_lens.cpp  test_node_lens.h
tests/test_node_merge/: test_node_merge.cpp  test_node_merge.h
tests/test_node_null/: test_node_null.cpp  test_node_null.h
tests/test_node_resample/: test_node_resample.cpp  test_node_resample.h
tests/test_node_transform/: test_node_transform.cpp  test_node_transform.h
tests/test_node_viewer/: test_node_viewer.cpp  test_node_viewer.h  test_node_viewer_3dlut.cpp  test_node_viewer_3dlut.h  test_node_viewer_disk_cache.cpp  test_node_viewer_disk_cache.h
tests/test_stream/: test_stream_empty_write_geom.cpp  test_stream_empty_write_geom.h
