[package]
name = "opencompgraph-rs"
version = "0.1.0"
authors = ["David Cattermole <cattermole91@gmail.com>"]
edition = "2018"
publish = false

[lib]
name = "opencompgraph_rs"
path = "./src/lib.rs"
# NOTE: 'lib' is used to link with Rust crates, 'staticlib' is used to
# link with C++.
crate_type = ["staticlib"]

[dependencies]
cxx = "=1.0.26"
libc = "0.2.0"
rustc-hash = "1.1.0"
fastapprox = "0.3.0"
log = "0.4.0"
env_logger = "0.8.2"

[dependencies.rand]
version = "0.7.3"
default-features = false
features = ["std", "alloc", "small_rng"]  # "serde"

[dependencies.petgraph]
version = "0.5.1"
default-features = false
features = ["stable_graph"]  # "serde-1"

[dependencies.image]
version = "0.23.12"
default-features = false
features = ["jpeg", "png", "tga", "tiff"]

[dependencies.nalgebra]
version = "0.23.2"
default-features = false
features = ["std", "matrixmultiply"]  # "serde"

[profile.release]
opt-level = 2
debug = false
rpath = false
lto = false
# NOTE: If we use 'panic = "abort"' then we are unable to produce tests.
# # https://github.com/rust-lang/cargo/issues/6313
#
# panic = "abort"
debug-assertions = false
